# Plasma

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .travis.yml  Auth.cpp  Auth.h  Brewfile  CMakeLists.txt  CONTRIBUTING.md  COPYING.txt  CREDITS.txt  ChunkBuffer.cpp  ChunkBuffer.h  Doxyfile  Game.cpp  GateKeeper.cpp  GateKeeper.h  NuGet.Config.in  README.md  README.rst  appveyor.yml  build-allclient-solution.bat  building.html  clean-allclient-solution.bat  credits.html  download.html  example_server.ini  index.html  involvement.html  plNetLog.cpp  plNetLog.h  prepare_env.bat  prepare_env.ps1  requirements.txt  running.html  style.css  vcpkg.json
MOULOpenSourceClientPlugin/Plasma20/: CMakeLists.txt
MOULOpenSourceClientPlugin/Plasma20/Docs/: Distributor.doc  Resource Manager.doc  sound cones.htm
MOULOpenSourceClientPlugin/Plasma20/cmake/: FindBink.cmake  FindDirectX.cmake  FindOgg.cmake  FindPhysX.cmake  FindSpeex.cmake  FindVorbis.cmake
Scripts/: CMakeLists.txt
Scripts/Installer/: MOUL.nsi
Scripts/Ports/libepoxy/: dllimport.patch  portfile.cmake  threading.patch  vcpkg.json
Scripts/Ports/physx/: portfile.cmake  vcpkg.json  win-arm64.patch
Scripts/Ports/python3/: 0001-only-build-required-projects.patch  0002-static-library.patch  0006-restore-support-for-windows-7.patch  0016-osx-cross-build.patch  0017-setup-search-paths.patch  0018-osx-static.patch  Setup.local.in  pathcch.c  pathcch_polyfill.h  portfile.cmake  python_vcpkg.props.in  vcpkg-cmake-wrapper.cmake  vcpkg.json  win7-0001-Polyfill-PathCch-with-WINE.patch  win7-0002-Revert-gh-102336-Remove-code-specifically-for-handli.patch  win7-0003-Remove-_winapi.CopyFile2.patch
Scripts/Ports/python3-cairosvg/: portfile.cmake  vcpkg.json
Scripts/Python/: Ahnonay.py  AhnonayCathedral.py  AhnyVogondolaRide.py  BahroCave.py  BaronCityOffice.py  ChisoPreniv.py  Cleft.py  Dereno.py  Descent.py  DescentMystV.py  EderBahvahnter.py  EderDelin.py  EderNaybree.py  EderTsogal.py  Elonin.py  Ercana.py  ErcanaCitySilo.py  Garden.py  GardenBugs.py  Garrison.py  Gira.py  GiraBugs.py  GiraCave1.py  GiraDoor.py  GiraSteam.py  GoMePubNew.py  GreatTreePub.py  GreatZero.py  Jalak.py  Kadish.py  Kalamee.py  KalameeResetJC.py  Kveer.py  LiveBahroCaves.py  Minkata.py  Mirtahm.py  Myst.py  Negilahn.py  Neighborhood.py  Neighborhood02.py  (+261 more)
Scripts/Python/ki/: __init__.py  xKIChat.py  xKIConstants.py  xKIExtChatCommands.py  xKIHelpers.py  xMarkerBrainCGZM.py  xMarkerBrainQuest.py  xMarkerBrainUser.py  xMarkerGameBrain.py  xMarkerMgr.py
Scripts/Python/plasma/: Plasma.py  PlasmaConstants.py  PlasmaControlKeys.py  PlasmaGame.py  PlasmaGameConstants.py  PlasmaGlue.py  PlasmaKITypes.py  PlasmaLoader.py  PlasmaNetConstants.py  PlasmaTypes.py  PlasmaVaultConstants.py  __init__.py  generate_stubs.py  glue.py  pch.py  ptWordFilter.py
Scripts/Python/system/: encodings.py  knee.py  pdb.py  statcache.py
Scripts/SDL/: BaronCityOffice.sdl  ChisoPreniv.sdl  Cleft.sdl  Dereno.sdl  Descent.sdl  DescentMystV.sdl  EderBahvahnter.sdl  EderDelin.sdl  EderNaybree.sdl  EderTsogal.sdl  Elonin.sdl  Ercana.sdl  ErcanaCitySilo.sdl  Garden.sdl  Garrison.sdl  Gira.sdl  GoMePubNew.sdl  GreatTreePub.sdl  GreatZero.sdl  Jalak.sdl  Kadish.sdl  Kalamee.sdl  Kveer.sdl  Minkata.sdl  Mirtahm.sdl  Myst.sdl  Negilahn.sdl  Neighborhood.sdl  Neighborhood02.sdl  Nexus.sdl  Payiferen.sdl  PelletBahroCave.sdl  Personal.sdl  Serene.sdl  Teledahn.sdl  Tetsonot.sdl  Tiam.sdl  VeeTsah.sdl  Vothol.sdl  ahnonay.sdl  (+21 more)
Scripts/ServerPython/python/: Do_Not_Load_RestorationGuild.py
Scripts/Tests/: xGamePythonReview.py
Scripts/Triplets/: arm64-ios-plasma.cmake  arm64-macos-plasma.cmake  arm64-windows-plasma.cmake  universal-macos-plasma.cmake  x64-macos-plasma.cmake  x64-windows-plasma.cmake  x86-windows-plasma.cmake
Scripts/dat/: Ahnonay.age  Ahnonay.fni  AhnonayCathedral.age  AhnonayCathedral.fni  AvatarCustomization.age  BahroCave.age  BahroCave.fni  BaronCityOffice.age  BaronCityOffice.fni  ChisoPreniv.age  ChisoPreniv.fni  Cleft.age  Cleft.fni  CustomAvatars.age  Dereno.age  Dereno.fni  Descent.age  Descent.fni  DescentMystV.age  DescentMystV.fni  EderBahvahnter.age  EderBahvahnter.fni  EderDelin.age  EderNaybree.age  EderNaybree.fni  Elonin.age  Elonin.fni  Ercana.age  ErcanaCitySilo.age  FahetsHighgarden.age  FahetsHighgarden.fni  GUI.age  Garden.age  Garden.fni  Garrison.age  Gira.fni  GlobalAnimations.age  GlobalAvatars.age  GlobalClothing.age  GoMePubNew.age  (+47 more)
Sources/MaxPlugin/: CMakeLists.txt
Sources/MaxPlugin/MaxComponent/: CMakeLists.txt  ComponentDummies.h  pfGUISkinComp.cpp  pfGUISkinComp.h  plAGComponents.cpp  plActivatorBaseComponent.cpp  plAnimCompProc.cpp  plAnimCompProc.h  plAnimEventComponent.cpp  plAnimObjInterface.h  plAudioComponents.cpp  plAutoUIBase.cpp  plAutoUIBase.h  plAutoUIParams.cpp  plAutoUIParams.h  plAvatarComponent.h  plBehavioralComponents.cpp  plBehavioralComponents.h  plBipedKiller.cpp  plBlowComponent.cpp  plCAnimParamBlock.h  plCameraComponents.cpp  plClickDragComponent.cpp  plClickDragComponent.h  plClickableComponent.cpp  plClickableComponent.h  plClimbComponent.cpp  plComponentBase.h  plComponentExt.h  plComponentMgr.cpp  plComponentMgr.h  plComponentProcBase.h  plComponentTools.cpp  plComponentTools.h  plDicer.cpp  plDicer.h  plDistribComponent.cpp  plDistribComponent.h  plDistribComponent_old.cpp  plDistribComponent_old.h  (+52 more)
Sources/MaxPlugin/MaxConvert/: CMakeLists.txt  Pch.h  hsControlConverter.cpp  hsConverterUtils.h  hsMaterialConverter.cpp  hsMaterialConverter.h  hsMaxLayerBase.h  hsVertexShader.h  plBitmapCreator.cpp  plBitmapCreator.h  plConvert.cpp  plConvert.h  plDistTree.cpp  plDistTree.h  plDistributor.cpp  plDistributor.h  plLayerConverter.cpp  plLayerConverter.h  plMaxLightContext.h  plMeshConverter.h  plRenderGlobalContext.h  plRenderInstance.cpp  plRenderInstance.h
Sources/MaxPlugin/MaxExport/: CMakeLists.txt  SimpleExport.cpp  plExportErrorMsg.cpp  (+3 more)
Sources/Tests/: CMakeLists.txt
Sources/Tools/: CMakeLists.txt
Tests/: CMakeLists.txt  testCyMisc.cpp  testPlUnifiedTime.cpp
(+6720 files in other folders)
