include_directories("${PLASMA_TOOLS_ROOT}")
include_directories("${PLASMA_SOURCE_ROOT}/FeatureLib")
include_directories("${PLASMA_SOURCE_ROOT}/NucleusLib")
include_directories("${PLASMA_SOURCE_ROOT}/PubUtilLib")

add_subdirectory(plFileEncrypt)
add_subdirectory(plFilePatcher)
add_subdirectory(plFileSecure)
add_subdirectory(plGeneratePythonStubs)
add_subdirectory(plLocalizationBenchmark)
add_subdirectory(plPageInfo)
add_subdirectory(plPageOptimizer)
add_subdirectory(plPythonPack)
add_subdirectory(plSystemInfo)

if(Qt_FOUND)
    add_subdirectory(plLocalizationEditor)
    if(WIN32)
        add_subdirectory(plNetLog)
    endif()
    add_subdirectory(plResBrowser)
endif()

if(WIN32)
    add_subdirectory(plShaderAssembler)
endif()

if(TARGET freetype AND Qt_FOUND)
    add_subdirectory(plFontConverter)
endif()
